# mcp-oauth

./: .env.example  .gitignore  README.md  app.py  oauth.py  pyproject.toml  requirements.txt
client/: __init__.py  __main__.py  auth_handler.py  cli.py  client.py
demos/: __init__.py  __main__.py  basic_demo.py  weather_demo.py
server/: __init__.py  __main__.py  app.py  config.py  exceptions.py  oauth.py
